overflow fixed

--- a/src/global/global.css
+++ b/src/global/global.css
@@ -36,6 +36,7 @@ html * {
 	justify-content: center;
 	align-items: center;
 	position: relative;
+	overflow: hidden;
 }
 
 .smallcontainer {
